[package]
name = "solana-cargo-build-sbf"
description = "Compile a local package and all of its dependencies using the Solana SBF SDK"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
# FIREDANCER: Firedancer never links with libbz2, but the crate thinks
# it will and doesn't link it statically if it finds it in PKG_CONFIG.
# We prevent this and always link statically.
# bzip2 = { workspace = true }
bzip2 = { workspace = true, features = ["static"] }
cargo_metadata = { workspace = true }
clap = { version = "3.1.5", features = ["cargo", "env"] }
itertools = { workspace = true }
log = { workspace = true, features = ["std"] }
regex = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "rustls-tls"] }
semver = { workspace = true }
solana-download-utils = { workspace = true }
solana-logger = { workspace = true }
solana-sdk = { workspace = true }
tar = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
serial_test = { workspace = true }
solana-sdk = { workspace = true, features = ["dev-context-only-utils"] }

[features]
program = []

[[bin]]
name = "cargo-build-sbf"
path = "src/main.rs"
